--- a/gradle.properties
+++ b/gradle.properties
@@ -24,4 +24,7 @@ mod_version = 1.0.DEVTEST.0
 forge_version = 47.2.6
 minecraft_version = 1.20.1
 
+flywheel_minecraft_version = 1.20.1
+flywheel_version = 1.0.4
+vanillin_version = 1.0.0
 ponder_version = 1.0.80
